<resources>
    <string name="app_name">SetupInfosiRacing</string>
    <string name="toeintoeout">ToeIn - ToeOut</string>
    <string name="toeintoeouttitle">ToeIn - ToeOut</string>
    <string name="toeintoeouttext"><![CDATA[

    • Grau de inclinação das rodas no eixo Y<br><br>
    • Afeta o comportamento do carro em curvas <br><br><br>

    • <b>DIANTEIRA</b><br><br>

     - Valores positivos(<b>TOE IN</b>): melhora entrada na curva e piora o contorno de curva(tende a espalhar a frente(UNDERSTEER) no meio da curva em curvas de raio longo).<br>
     --------------------------------------------------<br>
     - Valores negativos ou zero(<b>TOE OUT</b>): piora entrada de curva e melhora o contorno de curva(melhora o contorno nas curvas de raio longo).<br>
     --------------------------------------------------<br>
     - Valores positivos para curvas de raio curto ou 90º EX: chincane.<br>
     --------------------------------------------------<br>
     - Valores negativos ou zero: para curvas longas EX: laranja Interlagos.<br>
     --------------------------------------------------<br><br>

     • <b>TRASEIRA</b><br><br>
     - Valores positivos (<b>TOE IN</b>): melhora frenagem(<b>mantem estabilidade na frenagem e resposta na entrada de curva</b>) mas piora o contorno de curva e tem controlar o acelerador na saída de curva(<b>piora a tração na saida de curva</b>)<br>
     --------------------------------------------------<br>
     -  piora entrada na curva(<b>prejudica a estabilidade na frenagem e na entrada de curva</b>) mas melhora o contorno e a saída de curva(<b>melhora a tração na saida de curva)</b><br>
     --------------------------------------------------

     ]]></string>
    <string name="antirollbar">Barra Estabilizadora</string>
    <string name="antirollbartitle">Barra Estabilizadora</string>
    <string name="antirollbartext"><![CDATA[

    • Transfere o peso de uma roda para outra em curvas. Esquerda para direita e vice-versa<br><br>
    • Evita a rolagem de chassi(impedindo que a roda interna da curva perca contato com o solo).<br><br><br>

    • <b>DIANTEIRA</b><br><br>
     - Menor o valor: permite maior rolagem do chassi(O CHASSI ROLA PARA O LADO DE FORA DA CURVA SEMPRE), e melhora a entrada de curva(OVERSTEER). Porem causa excesso de peso na roda externa a curva causando maior desgaste de pneu.<br>
     --------------------------------------------------<br>
     - Maior valor: permite menor rolagem do chassi(O CHASSI ROLA PARA O LADO DE FORA DA CURVA SEMPRE), e piora a entrada de curva(UNDERSTEER) aplicando parte do peso que ia para as rodas externas para as rodas internas, evitando perda de contato das rodas internas com o solo.<br>
     --------------------------------------------------<br><br>

     • <b>TRASEIRA</b><br><br>
     - Menor o valor: permite maior rolagem do chassi(O CHASSI ROLA PARA O LADO DE FORA DA CURVA SEMPRE), e melhora a entrada de curva(UNDERSTEER). Porem causa excesso de peso na roda externa a curva causando maior desgaste de pneu.<br>
     --------------------------------------------------<br>
     - Maior valor: permite menor rolagem do chassi(O CHASSI ROLA PARA O LADO DE FORA DA CURVA SEMPRE), e piora a entrada de curva(OVERSTEER) aplicando parte do peso que ia para as rodas externas para as rodas internas, evitando perda de contato das rodas internas com o solo.<br>
     --------------------------------------------------

     ]]></string>
    <string name="rideheight">Cambagem</string>
    <string name="rideheighttitle">Cambagem</string>
    <string name="rideheighttext"><![CDATA[

    • Inclinação das rodas no eixo X<br><br>
    • Os cambers traseiros e dianteiros estão relacionados<br><br>
    • Camber maior na frente gera maior grip na frente podendo jogar o carro para dentro da curva<br><br>
    • Camber maior na traseira gera maior grip na traseira podendo jogar o carro para fora da curva<br><br>
    • Controla a area de contato dos pneus com o solo gerando aderência<br><br><br>

    • <b>DIANTEIRA</b><br><br>
     - Mais camber (VALORES NEGATIVOS): prejudica a entrada com demora em resposta do carro em relação a curva, porem o carro durante o contorno das curvas ele será mais estavel(Ideal para pistas com curvas de media e alta velocidade).<br>
     --------------------------------------------------<br>
     - Menos camber (VALORES PROXIMOS DE 0 OU POSITIVOS): melhora a entrada de curva, porem perde estabilidade no contorno das curvas(Ideal para pistas com curvas de baixa velocidade)<br>
     --------------------------------------------------<br><br>

     • <b>TRASEIRA</b><br><br>
     - Mais camber (VALORES NEGATIVOS): Maior estabilidade no contorno de curvas, porem gera perda de tração em retomadas devido a area de contato com o solo ser reduzido (Ideal para pistas com curvas de media e alta velocidade)<br>
     --------------------------------------------------<br>
     - Menos camber (VALORES PROXIMOS DE 0 OU POSITIVOS): Menor estabilidade no contorno de curvas, porem gera ganho de tração em retomadas(Ideal para pistas com curvas de baixa velocidade)<br>
     --------------------------------------------------

     ]]></string>
    <string name="damper">Amortecedores</string>
    <string name="dampertitle">Amortecedores</string>
    <string name="dampertext"><![CDATA[

    • Controla a transferência de peso do carro<br><br>
    • Ajuda a manter o contato dos pneus com o solo em imperfeições da pista, frenagens, curvas e reacelerações<br><br>
    • São dividios em amortecedores rápidos(zebras e ondulações) e lentos(aceleração, frenagem e curvas)<br><br>
    • Amortecedores dianteiros entram em compressão na frenagen e descompressão na reaceleração<br><br>
    • Amortecedores traseiros entram em compressão na reaceleração e descompressão na frenagem<br><br>
    • Amortecedores da direita entram em compressão em curvas para a esquerda e descompressão em curvas para a direita(Peso é transferido para a esquerda do carro em entrada de curva)<br><br>
    • Amortecedores da esquerda entram em compressão em curvas para a direita e descompressão em curvas para a esquerda(Peso é transferido para a direita do carro em entrada de curva)<br><br>
    • Amortecedores muito macios(os 4 amortecedores) carro mais suave, porem pode causar rápida transferencia de peso no carro causando instabilidade e perda de aderência<br><br>
    • Geralmente é melhor ajustar os amortecedores lentos depois os rápidos<br><br>
    • Ideal trabalhar com ajustes inversos(se aumenta o bump diminui o rebound)<br><br>
    • Amortecedores muito duros(os 4 amortecedores) carro mais responsivo e firme, porem pode causar perda de estabilidade em situações de ondulações, podendo causar a perda de controle<br><br><br>


    • <b>FAST BUMP E FAST REBOUND</b><br><br>
     - Valores maiores(Fast bump): Aumenta a rigidez de compressão dos amortecedores dianteiros, em imperfeições da pista ou zebras(valores muito altos podem fazer o carro pular em ondulações e zebras devido a transferir os impactos para o chassi).<br>
     --------------------------------------------------<br>
     - Valores menores(Fast bump): Diminui a rigidez de compressão dos amortecedores dianteiros, em imperfeiçoes da pista ou zebras(valores muito baixos diminuem impactos transferidos ao chassi, porém a transferencia de peso é muito rápida podendo causar rolagem do chassi).<br>
     --------------------------------------------------<br>
     - Valores maiores(Fast rebound): Aumenta a rigidez de descompressão dos amortecedores dianteiros após a mola ser comprimida(valores muito altos podem fazer o carro demorar para fazer a roda voltar ao solo).<br>
     --------------------------------------------------<br>
     - Valores menores(Fast rebound): Diminui a rigidez de descompressão dos amortecedores dianteiros, em imperfeiçoes da pista ou zebras(valores muito baixos podem fazer as rodas subirem muito e fazer o carro tocar o solo).<br>
     --------------------------------------------------<br><br>

     • <b>SLOW BUMP E SLOW REBOUND</b><br><br>
     - Valores maiores(Slow bump): Aumenta a rigidez de compressão dos amortecedores dianteiros em curvas, reacelerações e frenagens(valores muito podem atrasar o recebimento de peso nas rodas dianteiras).<br>
     --------------------------------------------------<br>
     - Valores menores(Slow bump): Diminui a rigidez de compressão dos amortecedores dianteiros em curvas, reacelerações e frenagens(…).<br>
     --------------------------------------------------<br>
     - Valores maiores(Slow rebound): Aumenta a rigidez de descompressão dos amortecedores dianteiros após a mola ser comprimida(…).<br>
     --------------------------------------------------<br>
     - Valores menores(Slow rebound): Diminui a rigidez de descompressão dos amortecedores dianteiros, em imperfeiçoes da pista ou zebras(…).<br>
     --------------------------------------------------<br><br><br>

     ]]></string>
    <string name="differential">Diferencial</string>
    <string name="differentialtitle">Diferencial</string>
    <string name="differentialtext"><![CDATA[

    • Distribui a rotação das rodas<br><br>
    • Faz a roda externa girar mais que a roda interna da curva(forçando o carro a entrar na curva)<br><br><br>


     • <b>PRÉ CARGA</b><br><br>
     - Valores maiores: aumenta o tempo de transferência de diferencial.<br>
     - Valores menores: diminui o tempo de transferência de diferencial.<br><br>
     --------------------------------------------------<br><br><br>

     • <b>DESACELERAÇÃO</b><br><br>
     - Valores maiores: Permite que as rodas externas girem mais que a interna, gerando melhor entrada de curva(ENQUANTO DESACELERANDO)(valores muito alto podem causar excesso de rotação na rota externa gerando (OVERSTEER)).<br>
     --------------------------------------------------<br>
     - Valores menores: Iguala a rotatAção das rodas interna e externa gerando maior tração em linha reta e prejudicando o contorno de curva(ENQUANTO DESACELERANDO)(valores menores causam dificuldade de contorno de curva).<br>
     --------------------------------------------------<br><br><br>

     • <b>POTENCIA(ACELERAÇÃO)</b><br><br>
     - Valores maiores: Permite que as rodas externas girem mais que a interna, gerando melhor entrada de curva(ENQUANTO ACELERANDO)(valores muito alto podem causar excesso de rotação na rota externa gerando (OVERSTEER)).<br>
     --------------------------------------------------<br>
     - Valores menores: Iguala a rotatAção das rodas interna e externa gerando maior tração em linha reta e prejudicando o contorno de curva(ENQUANTO ACELERANDO)(valores menores causam dificuldade de contorno de curva).<br>
     --------------------------------------------------<br><br><br>

     ]]></string>
    <string name="tiresmp430">Pneus</string>
    <string name="tiresmp430title">Pneus</string>
    <string name="aeropackage">Pacote aerodinâmico</string>
    <string name="aerocalculator">Calculadora aerodinâmica</string>
    <string name="frontchassi">Ajuste dianteiro</string>
    <string name="frontleftandrightchassi">Ajuste dianteiro(Esquerdo/Direito)</string>
    <string name="rearleftandrightchassi">Ajuste traseiro(Esquerdo/Direito)</string>
    <string name="rearchassi">Ajuste traseiro</string>
    <string name="dampers">Amortecedores</string>
</resources>