<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context="com.diogooliveira.setupinfo.setupinfosiracing.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="30dp"
            android:background="@mipmap/iracinglogo"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true"/>

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@mipmap/backbutton"
            android:layout_gravity="right"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/backbutton" />

    </RelativeLayout>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center|left">

    <RadioGroup
        android:id="@+id/configsRadio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/toeInOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toeintoeout"
            android:layout_marginRight="10dp"
            android:textColor="@color/whiteColor"
            android:buttonTint="@color/whiteColor"/>

        <RadioButton
            android:id="@+id/antirollbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/antirollbar"
            android:layout_marginRight="10dp"
            android:textColor="@color/whiteColor"
            android:buttonTint="@color/whiteColor"/>

        <RadioButton
            android:id="@+id/rideheight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rideheight"
            android:layout_marginRight="10dp"
            android:textColor="@color/whiteColor"
            android:buttonTint="@color/whiteColor"/>

        <RadioButton
        android:id="@+id/damper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/damper"
        android:layout_marginRight="10dp"
        android:textColor="@color/whiteColor"
        android:buttonTint="@color/whiteColor"/>

        <RadioButton
            android:id="@+id/differential"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/differential"
            android:layout_marginRight="10dp"
            android:textColor="@color/whiteColor"
            android:buttonTint="@color/whiteColor"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/whiteColor"
            android:layout_marginBottom="5dp"
            android:alpha="0.5"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:background="@mipmap/mp430"
                android:layout_gravity="left"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Ajustes MP4-30"
                android:textStyle="bold|italic"
                android:gravity="right"
                android:textColor="@color/whiteColor"
                android:textSize="15sp"
                android:layout_marginRight="15dp"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/whiteColor"
            android:layout_marginBottom="5dp"
            android:alpha="0.5"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Pneus / Aerodinâmica"
            android:textStyle="bold|italic"
            android:gravity="center"
            android:textColor="@color/whiteColor"
            android:textSize="20sp"
            android:layout_marginTop="10dp"/>

        <RadioButton
            android:id="@+id/tires"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tiresmp430"
            android:layout_marginRight="10dp"
            android:textColor="@color/whiteColor"
            android:buttonTint="@color/whiteColor"/>

        <RadioButton
            android:id="@+id/aeropackage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aeropackage"
            android:layout_marginRight="10dp"
            android:textColor="@color/whiteColor"
            android:buttonTint="@color/whiteColor"/>

        <RadioButton
            android:id="@+id/aerocalculator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aerocalculator"
            android:layout_marginRight="10dp"
            android:textColor="@color/whiteColor"
            android:buttonTint="@color/whiteColor"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/whiteColor"
            android:layout_marginBottom="0dp"
            android:alpha="0.5"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Chassi"
            android:textStyle="bold|italic"
            android:gravity="center"
            android:textColor="@color/whiteColor"
            android:textSize="20sp"
            android:layout_marginTop="10dp"/>

        <RadioButton
            android:id="@+id/frontchassi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frontchassi"
            android:layout_marginRight="10dp"
            android:textColor="@color/whiteColor"
            android:buttonTint="@color/whiteColor"/>

        <RadioButton
            android:id="@+id/frontleftrightchassi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frontleftandrightchassi"
            android:layout_marginRight="10dp"
            android:textColor="@color/whiteColor"
            android:buttonTint="@color/whiteColor"/>

        <RadioButton
            android:id="@+id/rearleftrightchassi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rearleftandrightchassi"
            android:layout_marginRight="10dp"
            android:textColor="@color/whiteColor"
            android:buttonTint="@color/whiteColor"/>

        <RadioButton
            android:id="@+id/rearchassi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rearchassi"
            android:layout_marginRight="10dp"
            android:textColor="@color/whiteColor"
            android:buttonTint="@color/whiteColor"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/whiteColor"
            android:layout_marginBottom="0dp"
            android:alpha="0.5"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Amortecedores"
            android:textStyle="bold|italic"
            android:gravity="center"
            android:textColor="@color/whiteColor"
            android:textSize="20sp"
            android:layout_marginTop="10dp"/>

        <RadioButton
            android:id="@+id/dampers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dampers"
            android:layout_marginRight="10dp"
            android:textColor="@color/whiteColor"
            android:buttonTint="@color/whiteColor"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/whiteColor"
            android:layout_marginBottom="0dp"
            android:alpha="0.5"/>


    </RadioGroup>

     </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/whiteColor"
        android:textStyle="bold|italic"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/descriptionText"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/whiteColor"
            android:textSize="12sp"
            android:gravity="left|top"/>

        </ScrollView>

    </LinearLayout>

</LinearLayout>
